# yak-sdl2

./: CMakeLists.txt  README.md
libs/yak/: .gitignore  CMakeLists.txt
libs/yak/include/: game.hpp  yak.hpp
libs/yak/include/common/: common.hpp  config.hpp  input.hpp
libs/yak/include/components/: gameobject.hpp
libs/yak/include/utils/: vector.hpp
libs/yak/src/: game.cpp
libs/yak/src/common/: input.cpp
src/: game.h  main.cpp
